--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,9 @@ body {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/gallery/peopleoffice.jpg);
-
+  width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
